# SimpleresPacker

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/packer/: lz77.rs  mod.rs
testing/test_1/: .manifest.yaml  pack.smr
testing/test_2/: .manifest.yaml  compressed.txt  pack.smr  uncompressed.txt
