[package]
name = "simpleres_packer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
console = "0.15.10"
serde = {version="1.0.217", features=["derive"]}
serde_yaml = "0.9.34"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = 'abort'
strip = 'symbols'
